--- a/collection_1_cornelius.ipynb
+++ b/collection_1_cornelius.ipynb
@@ -30,15 +30,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q14099'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Evi%20nemeth.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Evi Nemeth'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q14105'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Meredith%20L%20Patterson%2027C3.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Meredith L. Patterson'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q14536'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Seth%20Meyers%20by%20Gage%20Skidmore.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Seth Meyers'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q15153'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Carl W. Ackerman'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q17525'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Sarah Bagley'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q18938'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Thomas%20Jane%202019%20by%20Glenn%20Francis.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Thomas Jane'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q21623'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Alicia%20ostriker%203206.JPG'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Alicia Ostriker'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q22677'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Michael%20Hart%20at%20HOPE%20Conference%20%28cropped%29.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Michael S. Hart'}}\n",
-      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q23437'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'William Hirstein'}}\n"
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q91'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Abraham%20Lincoln%20O-77%20matte%20collodion%20print.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Abraham Lincoln'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q186'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/KenJenningsByPhilKonstantin.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ken Jennings'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q605'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Ezra%20Klein%20in%202020%20cropped.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ezra Klein'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q607'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Mike%20Bloomberg%20Headshot.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Michael Bloomberg'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1379'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Gary%20Gygax%20Gen%20Con%202007.JPG'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Gary Gygax'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1618'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Col%20Charles%20Lindbergh.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Charles Lindbergh'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1779'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Louis%20Armstrong%20restored.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Louis Armstrong'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q2071'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/David%20Lynch%20Cannes%202017.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'David Lynch'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q2673'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Chuck%20Norris%20May%202015.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Chuck Norris'}}\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
