--- a/collection_1_darkhabani.ipynb
+++ b/collection_1_darkhabani.ipynb
@@ -23,9 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q609576'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Anthonis%20van%20Dyck%20004.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q609576'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Anthony%20van%20Dyck%20-%20Crowning%20with%20Thorns%20-%20WGA07433.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q609986'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Retrat%20d%27Elisa%20Casas.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q610803'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q611358'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q611583'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Rubens%20peace-war.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q611609'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q611945'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q613390'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Jeunes%20Filles%20en%20noir%20by%20Pierre-Auguste%20Renoir%20159.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q613928'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/David%20-%20Portrait%20of%20Monsieur%20Lavoisier%20and%20His%20Wife.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q614047'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Vermeer%20-%20Girl%20with%20a%20Red%20Hat.JPG'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q614986'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Paul%20Cezanne%2C%20A%20Modern%20Olympia%2C%20c.%201873-1874.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q615851'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Robert%20Campin%20003.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q617629'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Resurreccion%20Prado.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q618901'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Kersting%20-%20Apoll%20mit%20den%20Stunden.jpg'}, 'Urheberrechtsstatus': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q19652'}, 'UrheberrechtsstatusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# pip install sparqlwrapper\n",
     "# https://rdflib.github.io/sparqlwrapper/\n",
