--- a/collection_1_sommer.ipynb
+++ b/collection_1_sommer.ipynb
@@ -23,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Waldnymphe. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig von Hofmann-Zeitz'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/52'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Mädchenkopf. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig Knaus'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/67'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}\n",
+      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Im Schnee'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1884-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Carl Gustaf Hellqvist'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 469'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# pip install sparqlwrapper\n",
     "# https://rdflib.github.io/sparqlwrapper/\n",
