--- a/collection_1_debase.ipynb
+++ b/collection_1_debase.ipynb
@@ -23,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q263491'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Stuttgart-haus-der-geschichte-bw.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Haus der Geschichte Baden-Württemberg'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q264209'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/2021%20Juli-StammtischTour%20Valentin-Mus%C3%A4um%2002.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Valentin-Volkssänger-Musäum'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q264941'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Holzknechtmuseum%20Laubau%20-%20Transportschlitten%20-%20geo-en.hlipp.de%20-%2013307.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Holzknechtmuseum Ruhpolding'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q266565'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Wasmeier%20Bauernhofmuseum%201.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Markus Wasmeier Bauernhof- und Wintersportmuseum'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q268609'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/UlmStadthaus.JPG'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Stadthaus Ulm'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q276846'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/FranckescheStiftungen%203.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Francke Foundations'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q278908'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Markgr%C3%A4fliches%20Opernhaus%20Front%202019-07-29.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Margravial Opera House'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q286549'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/GraphyArchy%20-%20Wikipedia%2000039.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'The New Collection'}}\n",
+      "{'item': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q314082'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Nieders%C3%A4chsisches%20Landesmuseum%20%288535266820%29.jpg'}, 'itemLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Landesmuseum Hannover'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# pip install sparqlwrapper\n",
     "# https://rdflib.github.io/sparqlwrapper/\n",
