--- a/collection_1_tuku.ipynb
+++ b/collection_1_tuku.ipynb
@@ -23,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q40823'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q28803748'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Grechetto%20%28Giovanni%20Benedetto%20Castiglione%29%20-%20Crucifixion%20-%20Google%20Art%20Project.jpg'}, 'paintingLabel': {'type': 'literal', 'value': 'Q28803748'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Giovanni Benedetto Castiglione'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Musei di Strada Nuova'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q40823'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q28803749'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Grechetto%20%28Giovanni%20Benedetto%20Castiglione%29%20-%20Journey%20of%20the%20Family%20of%20Abraham%20-%20Google%20Art%20Project.jpg'}, 'paintingLabel': {'type': 'literal', 'value': 'Q28803749'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Giovanni Benedetto Castiglione'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Musei di Strada Nuova'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q40823'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q55083952'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Ritratto%20di%20Gian%20Lorenzo%20Bernini%20-%20Grechetto.jpg'}, 'paintingLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt von Gianlorenzo Bernini'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Giovanni Benedetto Castiglione'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Musei di Strada Nuova'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q155376'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q729197'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Cappella%20bartolini%20salimbeni%2C%20annunciazione%20di%20lorenzo%20monaco%2001.JPG'}, 'paintingLabel': {'type': 'literal', 'value': 'Q729197'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Lorenzo Monaco'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Santa Trinita'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q9348'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q866489'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Parmigianino%20Selfportrait%201540.jpg'}, 'paintingLabel': {'type': 'literal', 'value': 'Q866489'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Parmigianino'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Galleria nazionale di Parma'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q9348'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q866500'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Parmigianino%20-%20La%20schiava%20turca.jpg'}, 'paintingLabel': {'type': 'literal', 'value': 'Q866500'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Parmigianino'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Galleria nazionale di Parma'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q9348'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q867403'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Parmigianino%20-%20Madonna%20dal%20collo%20lungo%20-%20Google%20Art%20Project.jpg'}, 'paintingLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Madonna mit dem langen Hals'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Parmigianino'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Uffizien'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q9348'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q867403'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Parmigianino%20-%20Madonna%20dal%20collo%20lungo%20-%20Google%20Art%20Project.jpg'}, 'paintingLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Madonna mit dem langen Hals'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Parmigianino'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Kirche Santa Maria dei Servi'}}\n",
+      "{'artist': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q9348'}, 'painting': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q867678'}, 'image': {'type': 'uri', 'value': 'http://commons.wikimedia.org/wiki/Special:FilePath/Parmigianino%20007.jpg'}, 'paintingLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Antea'}, 'artistLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Parmigianino'}, 'originLabel': {'xml:lang': 'de', 'type': 'literal', 'value': 'Museo Nazionale di Capodimonte'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# pip install sparqlwrapper\n",
     "# https://rdflib.github.io/sparqlwrapper/\n",
