adding Python code for formatting results

--- a/collection_1_sommer.ipynb
+++ b/collection_1_sommer.ipynb
@@ -23,22 +23,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Waldnymphe. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig von Hofmann-Zeitz'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/52'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Mädchenkopf. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig Knaus'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/67'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}\n",
-      "{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Im Schnee'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1884-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Carl Gustaf Hellqvist'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 469'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}\n"
+      "{'head': {'vars': ['title', 'creatorLabel', 'inception', 'inventory_number', 'made_from_materialLabel', 'image', 'copyright_statusLabel']}, 'results': {'bindings': [{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Waldnymphe. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig von Hofmann-Zeitz'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/52'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Mädchenkopf. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig Knaus'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/67'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Im Schnee'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1884-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Carl Gustaf Hellqvist'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 469'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}]}}\n",
+      "Inventory number: A III 733/52\n",
+      "\n",
+      "Title: Waldnymphe. Miniatur aus der Sammlung Loewe\n",
+      "\n",
+      "Creator: Ludwig von Hofmann-Zeitz\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A I 459\n",
+      "\n",
+      "Title: Teneriffa\n",
+      "\n",
+      "Creator: Fritz Hildebrandt\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A I 459\n",
+      "\n",
+      "Title: Teneriffa\n",
+      "\n",
+      "Creator: Fritz Hildebrandt\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A II 385\n",
+      "\n",
+      "Title: Porträt der Freifrau Adelheid von Berlichingen\n",
+      "\n",
+      "Creator: Eduard Von Steinle\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A II 385\n",
+      "\n",
+      "Title: Porträt der Freifrau Adelheid von Berlichingen\n",
+      "\n",
+      "Creator: Eduard Von Steinle\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A III 733/67\n",
+      "\n",
+      "Title: Mädchenkopf. Miniatur aus der Sammlung Loewe\n",
+      "\n",
+      "Creator: Ludwig Knaus\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A III 458\n",
+      "\n",
+      "Title: Bildnis einer Dame aus dem Hause Bismarck\n",
+      "\n",
+      "Creator: http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A III 458\n",
+      "\n",
+      "Title: Bildnis einer Dame aus dem Hause Bismarck\n",
+      "\n",
+      "Creator: http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: A I 469\n",
+      "\n",
+      "Title: Im Schnee\n",
+      "\n",
+      "Creator: Carl Gustaf Hellqvist\n",
+      "\n",
+      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -68,6 +155,30 @@
     "}\n",
     "LIMIT 9\"\"\"\n",
     "\n",
+    "# SUBROUTINES\n",
+    "\n",
+    "def get_delay(date):\n",
+    "    try:\n",
+    "        date = datetime.datetime.strptime(date, '%a, %d %b %Y %H:%M:%S GMT')\n",
+    "        timeout = int((date - datetime.datetime.now()).total_seconds())\n",
+    "    except ValueError:\n",
+    "        timeout = int(date)\n",
+    "    return timeout\n",
+    "\n",
+    "def get_image(url, headers):\n",
+    "    r = requests.get(url, headers=headers, stream=True)\n",
+    "    if r.status_code == 200:\n",
+    "        im = Image.open(r.raw)\n",
+    "        return im\n",
+    "    if r.status_code == 500:\n",
+    "        return None\n",
+    "    if r.status_code == 403:\n",
+    "        return None\n",
+    "    if r.status_code == 429:\n",
+    "        timeout = get_delay(r.headers['retry-after'])\n",
+    "        print('Timeout {} m {} s'.format(timeout // 60, timeout % 60))\n",
+    "        time.sleep(timeout)\n",
+    "        get_image(url, headers)\n",
     "\n",
     "def get_results(endpoint_url, query):\n",
     "    user_agent = \"WDQS-example Python/%s.%s\" % (sys.version_info[0], sys.version_info[1])\n",
@@ -77,11 +188,28 @@
     "    sparql.setReturnFormat(JSON)\n",
     "    return sparql.query().convert()\n",
     "\n",
+    "# MAIN PROGRAM\n",
     "\n",
     "results = get_results(endpoint_url, query)\n",
     "\n",
+    "print(results)\n",
+    "\n",
     "for result in results[\"results\"][\"bindings\"]:\n",
-    "    print(result)\n"
+    "    if 'inventory_number' in result:\n",
+    "      print('Inventory number: ' + result['inventory_number']['value'] + '\\n')\n",
+    "    print('Title: ' + result['title']['value'] + '\\n')\n",
+    "    print('Creator: ' + result['creatorLabel']['value'] + '\\n')\n",
+    "    if 'copyright_statusLabel' in result:\n",
+    "      print('Copyright status: ' + result['copyright_statusLabel']['value'] + '\\n')\n",
+    "\n",
+    "    if 'image' in result:\n",
+    "      # get image from image URL and display resized version\n",
+    "      image_url=result['image']['value']\n",
+    "      headers = {'User-Agent': 'Ex_Books_conference_bot/0.0 (https://github.com/SimonXIX/Experimental_Books_workshop; ad7588@coventry.ac.uk)'}\n",
+    "      im = get_image(image_url, headers)\n",
+    "      im.thumbnail((500, 500), Image.Resampling.LANCZOS)\n",
+    "      display(im)\n",
+    "    print('\\n\\n')"
    ]
   }
  ],
@@ -101,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
